# zkpoex

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  justfile  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
bytecode/: TargetContract.bin-runtime  TargetContract.sol
contracts/: .env.example  .gitignore  README.md
contracts/scripts/: Cargo.toml  Deploy.s.sol  deploy.sh  program_spec.json
contracts/src/: ContextERC20.sol  ContextTemplateERC20.sol  ImageID.sol  TargetContract.sol  VerifierContract.sol
contracts/src/context/: ContextTemplateERC20.sol
contracts/src/examples/: BasicVulnerable.sol  OverUnderFlowVulnerable.sol  ReentrancyVulnerable.sol  TargetContract.sol
contracts/src/examples/reentrancy/: AttackContract.sol  ReentrancyVulnerable.sol
contracts/test/: VerifierContract.t.sol
contracts/test/mocks/: MockRiscZeroVerifier.sol
docs/0.1.0/: DOCS.md
evm-runner/: Cargo.toml  README.md
evm-runner/src/: conditions.rs  context.rs  input.rs  lib.rs
host/: Cargo.toml  README.md
host/src/: lib.rs  main.rs  onchain-verifier.rs  onchain_verifier.rs  utils.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
sc-owner/: Cargo.toml  README.md
sc-owner/src/: main.rs
scripts/: .gitignore
scripts/bench/: README.md  bench.sh
shared/: Cargo.toml
shared/examples/basic-vulnerable/: context_state.json  program_spec.json
shared/examples/over-under-flow/: context_state.json  program_spec.json
shared/examples/reentrancy/: context_state.json  program_spec.json
shared/files/: context_state.json  program_spec.json
shared/src/: lib.rs  log.rs
