[package]
name = "evm-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
shared = { path = "../shared" }
hex = { version = "0.4", default-features = false, features = [ "alloc" ]  }
evm = { version = "0.42.0", default-features = false, features = ["with-serde"] }
primitive-types =  { version = "0.12.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hpke = { version = "0.12.0" }
rand = { version = "0.8.5" }
ethabi = { version = "18.0.0" }