[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
shared = { path = "../shared" }
risc0-zkvm = { version = "2.0.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
primitive-types = { version = "0.12.0", default-features = false }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bytemuck = "1.14"