[package]
name = "deploy_hashes"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = "0.12"
sha3 = "0.10"
hex = "0.4"
primitive-types =  { version = "0.12.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
evm-runner = { path = "../../evm-runner" }

[[bin]]
name = "deploy_hashes"
path = "src/bin/deploy_hashes.rs"
