[package]
name = "zkpoex_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.1", default-features = false, features = ['std'] }
evm-runner = { path = "../../evm-runner" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evm = { version = "0.42.0", default-features = false }
primitive-types =  { version = "0.12.0", default-features = false }
