[package]
name = "zkpoex_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ['std'] }
evm-runner = { path = "../../evm-runner" }
shared = { path = "../../shared" }
serde_json = "1.0"
primitive-types =  { version = "0.12.0", default-features = false }
alloy-sol-types = { version = "1.0.0" }
alloy-primitives = { version = "1.0.0" }
